--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO List</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>TODO List</h1>
     <input type="text" id="todoInput" placeholder="Aggiungi una nuova TODO">
     <button id="insertButton">Aggiungi</button>
     <ul id="todoList"></ul>
-    <script src="script.js"></script>
+    <script src="client.js"></script>
     <script src="server.js"></script>
 </body>
 </html>
